<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.jamk.h3090.basicuicontrols.LoginActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow>
            <TextView
                android:text="@string/text_login"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20dp"
                android:textSize="20sp"/>
            <AutoCompleteTextView
                android:id="@+id/loginText"
                android:layout_width="200dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/text_password"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20dp"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/passwordText"
                android:inputType="textPassword"
                android:layout_width="200dp" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnLogin"
                android:text="@string/text_login_button"
                android:onClick="loginButtonClicked"
                android:layout_marginTop="20dp"/>
        </TableRow>
    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_radio_example"
        android:onClick="switchToRadioView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp" />

</RelativeLayout>
